:building_construction: Implementing the first `verification_key` call

--- a/app/config.ini
+++ b/app/config.ini
@@ -1,3 +1,14 @@
-[main]
-keypath = /home/puria/src/dddc-credential-issuer/keyring.keys
+[DEFAULT]
+# WARNING: *THE LINE BELOW MUST BE FALSE ON A PRODUCTION ENVIRONMENT*
+debug = true
 
+# This is a unique ID that distinguish the Credential Issuer instance
+uid = Credential Issuer 01
+
+# The abs path of the file where the keypair of the CI is stored
+# WARNING: if it does not exists will be created the first time
+# WARNING: the parent directory should exists
+keypair = /app/app/ci_keypair.keys
+
+
+contracts_path = /app/app/contracts/src
