--- a/setup.cfg
+++ b/setup.cfg
@@ -3,3 +3,11 @@ test=pytest
 
 [tool:pytest]
 addopts = --cov=app --cov-report term-missing
+env =
+    DDDC_CREDENTIAL_ISSUER_CONFIGFILE=/home/puria/src/dddc-credential-issuer/app/test.ini
+
+
+
+[flake8]
+ignore = E501
+max-line-length = 99
