:construction_worker: libpython

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,12 @@
 language: python
+dist: xenial
+addons:
+  apt:
+    packages:
+    - libpython3.6-dev
 python:
     - "3.7-dev"
     - "3.6"
-before_install:
-    - sudo apt-get update
-    - sudo apt-get install -y libpython3.6-dev
 install:
     - pip install -e .
     - pip install codecov
