:key: Added token handeling for DDDC site base on OAuth2 Bearer

--- a/app/config.ini
+++ b/app/config.ini
@@ -12,3 +12,9 @@ keypair = /app/app/ci_keypair.keys
 
 
 contracts_path = /app/app/contracts/src
+
+
+# OAuth2
+ALGORITHM = HS256
+TOKEN_SUBJECT = access
+ACCESS_TOKEN_EXPIRE_MINUTES = 30
