--- a/app/test.ini
+++ b/app/test.ini
@@ -3,3 +3,6 @@ debug = true
 uid = Credential Issuer 01
 keypair = /tmp/ci_keypair.keys
 contracts_path = /home/travis/build/DECODEproject/dddc-credential-issuer/app/contracts/src
+ALGORITHM = HS256
+TOKEN_SUBJECT = access
+ACCESS_TOKEN_EXPIRE_MINUTES = 30
