:sparkle: new calls `authorizable_attribute`

--- a/app/config.ini
+++ b/app/config.ini
@@ -18,3 +18,7 @@ contracts_path = /app/app/contracts/src
 ALGORITHM = HS256
 TOKEN_SUBJECT = access
 ACCESS_TOKEN_EXPIRE_MINUTES = 30
+
+
+# Database
+SQLALCHEMY_DATABASE_URI = sqlite:////app/app/test.db
