--- a/app/test.ini
+++ b/app/test.ini
@@ -6,3 +6,4 @@ contracts_path = /home/travis/build/DECODEproject/dddc-credential-issuer/app/con
 ALGORITHM = HS256
 TOKEN_SUBJECT = access
 ACCESS_TOKEN_EXPIRE_MINUTES = 30
+SQLALCHEMY_DATABASE_URI = sqlite:////home/travis/build/DECODEproject/dddc-credential-issuer/app/test.db
