:ambulance: Fix test, stable situation, improved tests, new contracts and zenroom python release

--- a/app/test.ini
+++ b/app/test.ini
@@ -1,8 +1,9 @@
 [DEFAULT]
 debug = true
 uid = Credential Issuer 01
-keypair = /tmp/ci_keypair.keys
+keypair = /home/travis/build/DECODEproject/dddc-credential-issuer/tests/ci_keypair.keys
 contracts_path = /home/travis/build/DECODEproject/dddc-credential-issuer/app/contracts/src
+
 ALGORITHM = HS256
 TOKEN_SUBJECT = access
 ACCESS_TOKEN_EXPIRE_MINUTES = 30
