:lock: Add configurable user/pass from env config files

--- a/app/config.ini
+++ b/app/config.ini
@@ -18,7 +18,8 @@ contracts_path = /app/app/contracts/src
 ALGORITHM = HS256
 TOKEN_SUBJECT = access
 ACCESS_TOKEN_EXPIRE_MINUTES = 30
-
+AUTH_USERNAME = demo
+AUTH_PASSWORD = demo
 
 # Database
 SQLALCHEMY_DATABASE_URI = sqlite:////app/app/test.db
