--- a/app/test.ini
+++ b/app/test.ini
@@ -7,4 +7,6 @@ contracts_path = /home/travis/build/DECODEproject/dddc-credential-issuer/app/con
 ALGORITHM = HS256
 TOKEN_SUBJECT = access
 ACCESS_TOKEN_EXPIRE_MINUTES = 30
+AUTH_USERNAME = demo
+AUTH_PASSWORD = demo
 SQLALCHEMY_DATABASE_URI = sqlite:////home/travis/build/DECODEproject/dddc-credential-issuer/app/test.db
