:arrow_up: Upgrading contracts, zenroom and fastapi

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 test=pytest
 
 [tool:pytest]
-addopts = --cov=app --cov-report term-missing
+addopts = --maxfail=1 --cov=app --cov-report term-missing
 env =
     DDDC_CREDENTIAL_ISSUER_CONFIGFILE=/home/puria/src/dddc-credential-issuer/app/test.ini
 
