--- a/app/config.ini
+++ b/app/config.ini
@@ -3,7 +3,7 @@
 debug = true
 
 # This is a unique ID that distinguish the Credential Issuer instance
-uid = Credential Issuer 01
+uid = issuer_identifier
 
 # The abs path of the file where the keypair of the CI is stored
 # WARNING: if it does not exists will be created the first time
