--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 language: python
-dist: xenial
+dist: bionic
 python:
-    - "3.6.5"
+    - "3.6.7"
+    - "3.7.1"
 install:
     - pip install -e .
     - pip install codecov
